// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-placeholder css-1y97043"
  data-g2-c16t="true"
  data-g2-component="Placeholder"
  style="height: 36px;"
/>
`;

exports[`props should render height 1`] = `
<div
  class="wp-components-placeholder css-1y97043"
  data-g2-c16t="true"
  data-g2-component="Placeholder"
  style="height: 340px;"
/>
`;

exports[`props should render width 1`] = `
<div
  class="wp-components-placeholder css-1y97043"
  data-g2-c16t="true"
  data-g2-component="Placeholder"
  style="height: 36px; width: 340px;"
/>
`;
